# perainterestfree

./: .env  Cargo.toml  README.md  request_write_access_brails.txt
docs/deployment/: pera_quddret_setup.md
migrations/: 20251116112_create_crypto_addresses.sql  20251116122_create_virtual_accounts.sql  20251116132_create_notifications.sql  20251116142_create_physical_card_requests.sql  20251116152_create_account_closure_requests.sql  20251116162_create_fraud_alerts.sql  2025111622_create_user_profiles.sql  2025111632_create_user_sessions.sql  2025111642_create_wallets.sql  2025111652_create_transactions.sql  2025111662_create_umrah_payments.sql  20251116_add_fraud_data_to_transactions.sql  20251116_add_user_pin.sql  20251116_create_beneficiaries.sql  20251116_create_card_transactions.sql  20251116_create_cards.sql  20251116_create_fraud_alerts.sql  20251116_create_users.sql  20251116_create_virtual_accounts.sql  20251116_create_zakat_donations.sql  20251116_upgrade_transactions_table.sql  2025111712_add_brails_customer_id.sql  2025111720_create_admin_roles.sql  2025111721_create_admin_users.sql  2025111722_create_admin_permissions.sql  2025111792_create_risk_zones.sql  20251117_create_admin_role_permissions.sql  20251117_create_admin_roles.sql  20251117_create_admin_users.sql  20251117_create_behavior_profiles.sql  20251117_create_funding_events.sql  20251117_create_internal_graph_edges.sql  20251117_create_system_settings.sql  2025111903_add_user_profile_fields.sql  2025111905_create_partner_entities.sql  2025111906_create_wallet_holds.sql  2025111907_create_cash_withdrawals.sql  2025111908_create_audit_logs.sql  2026032301_create_cash_deposits.sql  2026032302_create_verification_otps.sql  (+1 more)
src/: brails_client.rs  crypto_provider_client.rs  crypto_service.rs  encryption_service.rs  error.rs  main.rs  otp_service.rs
src/account_closure_service/: handlers.rs  models.rs  routes.rs
src/admin_analytics_service/: handlers.rs  models.rs  routes.rs
src/admin_auth_service/: extractors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
src/admin_management_service/: handlers.rs  models.rs  routes.rs
src/admin_settings_service/: handlers.rs  models.rs  routes.rs  service.rs
src/app_data_service/: handlers.rs  models.rs  routes.rs
src/auth/: jwt.rs  (+6 more)
(+75 files in other folders)
