[package]
name = "pera_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum and Tokio
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & Environment
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros" ] }

# Auth & Crypto
bcrypt = "0.17.1"
jsonwebtoken = "10.2.0"
magic-crypt = "4.0.1"

# Utilities
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email (FIXED)
[dependencies.lettre]
version = "0.11.19"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls"
]
